nird/apps/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - minio.elixir-uit.sigma2.no
        - minio-console.elixir-uit.sigma2.no
      secretName: wildcard-tls
  rules:
    - host: minio.elixir-uit.sigma2.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
    - host: minio-console.elixir-uit.sigma2.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9001
